--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "guesser-game-api"
 version = "0.1.0"
 edition = "2021"
 
-<<<<<<< HEAD
 [dependencies]
+dotenv = "0.15.0"
+envy = "0.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
@@ -16,8 +17,3 @@ features = ["json"]
 version = "0.4.10"
 default-features = false
 features = ["json"]
-=======
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
->>>>>>> master
