--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ dotenv = "0.15.0"
 envy = "0.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+mongodb = "2.7.1"
 
 [dependencies.rocket]
 version = "0.5.0"
