storage-and-handler-secret

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ API_PORT=4000
 RELEASE_MODE=dev
 TIMEOUT=75
 MONGO_URI=mongodb://localhost:27017
+CLUE1_ATTEMPTS=5
+CLUE2_ATTEMPTS=10
+CLUE3_ATTEMPTS=15
