--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 mongodb = "2.7.1"
 env_logger = "0.10.0"
+uuid = "1.5.0"
 
 [dependencies.rocket]
 version = "0.5.0"
